# graphql-benchmarks

./: .gitignore  README-Edit-This.md  README.md  analyze.js  analyze.py  analyze.sh  analyze.ts  architecture.md  benchmark.py  config.json  docker-compose.yml  fetch_panels.sh  generate_load.sh  package-lock.json  package.json  random_file.txt  renovate.json  results.md  run_analyze_script.sh  run_benchmark.js  run_benchmarks.js  run_benchmarks.sh  run_benchmarks.ts  setup.sh  test_query.sh  test_query1.sh  test_query2.sh  test_query3.sh  timestamp.txt  tsconfig.json
.devcontainer/: Dockerfile  Dokerfile  devcontainer.json
.github/workflows/: bench.yml  benchmark.yml  benchmarking-runner.yml
analyze/: config.js  config.ts  dataFileWriter.js  dataFileWriter.ts  fileUtils.js  fileUtils.ts  gnuplotGenerator.js  gnuplotGenerator.ts  parser.js  parser.ts  resultsFormatter.js  resultsFormatter.ts  types.ts
assets/: canvas.excalidraw
graphql/apollo-server/: index.js  package-lock.json  package.json  run.sh
graphql/apollo_server/: index.js  package-lock.json  package.json  run.sh  (+1 more)
graphql/async_graphql/: Cargo.toml  build.sh  run.sh  setup.sh
graphql/async_graphql/src/: main.rs
k6/: bench.js  bench.sh  warmup.sh
nginx/: nginx.conf  run.sh
oha/: bench1.sh  bench2.sh
parser/: Cargo.toml
src/: analyze.ts  config.ts  run_benchmarks.ts  utils.ts
wrk/: analyze.js  apollo-bench.sh  apollo_bench.sh  bench.sh  bench1.sh  bench2.sh  caliban_bench.sh  dgs-bench.sh  gqlgen-bench.sh  run.sh  tc-bench.sh  tc_bench.sh  wrk.lua  wrk.sh  wrk1.lua  wrk2.lua  wrk3.lua
(+68 files in other folders)
