[package]
name = "async_graphql_tailcall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-graphql = "7.0.3"
async-graphql-axum = "7"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "parking_lot"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
