[package]
name = "async_graphql_tailcall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-graphql = { version = "7.0.3", features = ["dataloader"] }
async-graphql-axum = "7.0.3"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "parking_lot"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.200"
serde_json = "1.0.116"
futures = "0.3.30"
